add liquidate fund admin
